# Starfall-WoW-Launcher_V1

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
docs/: ARCHITECTURE.md  KICKOFF_PROMPT.md
mock-server/: README.md  cms.js  db.js  package.json  pnpm-lock.yaml  server.js  srp6.js
public/icons/race/: README.txt
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fs_safety.rs  hash_cache.rs  lib.rs  main.rs
src-tauri/src/commands/: addons.rs  auth.rs  backup.rs  cache.rs  launch.rs  mod.rs  patcher.rs  realmlist.rs
src-tauri/tests/: e2e.rs
src/api/: auth.ts  cms.ts  game.ts  patcher.ts
src/components/: ErrorBoundary.tsx  HomeWidgets.tsx  LocalePicker.tsx  ProtectedRoute.tsx  Starfield.tsx
src/data/: expansions.ts
src/i18n/: store.ts  strings.ts  useT.ts
src/lib/: affixes.ts  icons.ts
src/pages/: Addons.tsx  Admin.tsx  Armory.tsx  BugReport.tsx  Calendar.tsx  Changelog.tsx  Characters.tsx  Home.tsx  Install.tsx  LeaderboardPvP.tsx  LeaderboardRaids.tsx  Leaderboards.tsx  Login.tsx  MythicPlus.tsx  Referral.tsx  Settings.tsx  Shop.tsx  Transmog.tsx  Vote.tsx
src/state/: auth.ts  installer.ts  launcher.ts
